--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">SPRINT</string>
+    <string name="Increment">Increment</string>
+    <string name="Numero">Numero</string>
 </resources>
