--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">SPRINT</string>
     <string name="Increment">Increment</string>
+    <string name="Incrementar">Incrementar</string>
     <string name="Numero">Numero</string>
 </resources>
